--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ prose:
       - name: title
         field:
           element: text
+          label: Title
       - name: description
         field:
           element: textarea
+          label: Description
